Change Java-Version to 1.8