@@ -1,5 +1,5 @@
 configurations {
-    wildflyDist { transitive = false }
+    wildflyDist
 }
 
 /**
@@ -51,7 +51,7 @@ subprojects {
 
     apply plugin: "java"
 
-    sourceCompatibility = 1.7
+    sourceCompatibility = 1.8
 
     repositories {
         mavenCentral()
@@ -75,7 +75,6 @@ subprojects {
     }
 
     test {
-        jvmArgs '-XX:MaxPermSize=512m'
 
         /**
          * Installation of JBOSS to use for testing, this can be set here
